--- a/assets/css/_base.less
+++ b/assets/css/_base.less
@@ -4,7 +4,7 @@ body {
 }
 
 .squatch-container {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
   width: @container-width;
   position: relative;
 
@@ -29,7 +29,7 @@ body {
 
 .squatch-title {
   margin: 0 0 22px;
-  color: @blue;
+  color: @red;
 
   @media (max-width: @screen-sm-max) {
     font-size: @font-size-xl;
