--- a/assets/css/_variables.less
+++ b/assets/css/_variables.less
@@ -11,6 +11,7 @@
 @blue:                    #4486e1;
 @green:                   #35b21e;
 @yellow:                  #f2ae43;
+@red:					  #cc181e;
 
 @facebook-blue:           #234079;
 @twitter-blue:            #4797d2;
