Color variable changes

--- a/assets/css/_base.less
+++ b/assets/css/_base.less
@@ -4,7 +4,7 @@ body {
 }
 
 .squatch-container {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif !important;
   width: @container-width;
   position: relative;
 
