--- a/assets/css/_shims.less
+++ b/assets/css/_shims.less
@@ -5,6 +5,7 @@ html.no-flash {
     .form-control {
       width: 100%;
       border-right: 1px solid @input-border;
+      border-radius: 0;
     }
 
     .input-group-btn {
