--- a/assets/css/_stats.less
+++ b/assets/css/_stats.less
@@ -28,7 +28,7 @@
     padding: @grid-gutter-width;
     background: @gray-lightest;
     border: 1px solid @gray-lighter;
-
+/*
     &:first-child {
       border-radius: @border-radius-base @border-radius-base 0 0;
     }
@@ -36,7 +36,7 @@
     &:last-child {
       border-radius: 0 0 @border-radius-base @border-radius-base;
     }
-  }
+  }*/
 }
 
 .squatch-stats-title {
