--- a/assets/css/_variables.less
+++ b/assets/css/_variables.less
@@ -1,11 +1,12 @@
 // Colors
 @black:                   #000;
-@gray-darker:             #444;
-@gray-dark:               #5b6165;
+@gray-darkest:			  #222;
+@gray-darker:             #333;
+@gray-dark:               #767676;
 @gray:                    #9a9999;
 @gray-light:              #a9a9a9;
-@gray-lighter:            #ddd;
-@gray-lightest:           #f2f2f2;
+@gray-lighter:            #d3d3d3;
+@gray-lightest:           #f8f8f8;
 @white:                   #fff;
 
 @blue:                    #4486e1;
@@ -39,13 +40,13 @@
 @body-padding-sm:         20px;
 
 // Theme components
-@btn-primary-color:       #fff;
-@btn-primary-bg:          @gray-dark;
-@btn-primary-border:      @gray-dark;
+@btn-primary-color:       @gray-dark;
+@btn-primary-bg:          @gray-lightest;
+@btn-primary-border:      @gray-lighter;
 
 @btn-email-color:         #fff;
-@btn-email-bg:            darken(@gray-dark, 15%);
-@btn-email-border:        darken(@gray-dark, 15%);
+@btn-email-bg:            @gray-darkest;
+@btn-email-border:        @gray-darkest;
 
 @btn-facebook-color:      #fff;
 @btn-facebook-bg:         @facebook-blue;
