--- a/assets/css/_variables.less
+++ b/assets/css/_variables.less
@@ -1,6 +1,5 @@
 // Colors
 @black:                   #000;
-@gray-darkest:			  #222;
 @gray-darker:             #333;
 @gray-dark:               #767676;
 @gray:                    #9a9999;
@@ -40,13 +39,17 @@
 @body-padding-sm:         20px;
 
 // Theme components
-@btn-primary-color:       @gray-dark;
-@btn-primary-bg:          @gray-lightest;
-@btn-primary-border:      @gray-lighter;
+@btn-primary-color:       #fff;
+@btn-primary-bg:          @red;
+@btn-primary-border:      @red;
+
+@btn-default-color: 	  @gray-dark;
+@btn-default-bg: 		  @gray-lightest;
+@btn-default-border:	  @gray-lighter;
 
 @btn-email-color:         #fff;
-@btn-email-bg:            @gray-darkest;
-@btn-email-border:        @gray-darkest;
+@btn-email-bg:            @gray-darker;
+@btn-email-border:        @gray-darker;
 
 @btn-facebook-color:      #fff;
 @btn-facebook-bg:         @facebook-blue;
