Border radius test

--- a/assets/css/_variables.less
+++ b/assets/css/_variables.less
@@ -27,7 +27,7 @@
 @font-size-xs:            12px;
 
 // Border radius
-@border-radius-base:      4px;
+@border-radius-base:      0px;
 
 // Buttons
 @label-default-bg:        lighten(@gray-dark, 10%);
@@ -40,10 +40,10 @@
 
 // Theme components
 @btn-primary-color:       #fff;
-@btn-primary-bg:          @red;
-@btn-primary-border:      @red;
+@btn-primary-bg:          darken(@red, 10%);
+@btn-primary-border:      darken(@red, 10%);
 
-@btn-default-color: 	  @gray-dark;
+@btn-default-color: 	  @gray-darker;
 @btn-default-bg: 		  @gray-lightest;
 @btn-default-border:	  @gray-lighter;
 
