--- a/assets/css/_variables.less
+++ b/assets/css/_variables.less
@@ -28,6 +28,8 @@
 
 // Border radius
 @border-radius-base:      0px;
+@padding-base-vertical:	  4px;
+@padding-base-horizontal: 20px;
 
 // Buttons
 @label-default-bg:        lighten(@gray-dark, 10%);
