--- a/assets/css/_base.less
+++ b/assets/css/_base.less
@@ -7,6 +7,7 @@ body {
   font-family: 'Roboto', sans-serif !important;
   width: @container-width;
   position: relative;
+  border-radius: 0px !important;
 
   @media (max-width: @container-width) {
     width: 100%;
